--- a/Client/index.html
+++ b/Client/index.html
@@ -11,9 +11,9 @@
     <meta name="twitter:site" content="https://x.com/ultimatedigits">
     <meta name="twitter:title" content="Spank Me">
     <meta name="twitter:description" content="Spank on X">
-    <meta name="twitter:player" content="https://spank-tau.vercel.app/">
-    <meta name="twitter:app:player" content="https://spank-tau.vercel.app/">
-    <meta name="x:app:player" content="https://spank-tau.vercel.app/">
+    <meta name="twitter:player" content="https://spank-tau.vercel.app">
+    <meta name="twitter:app:player" content="https://spank-tau.vercel.app">
+    <meta name="x:app:player" content="https://spank-tau.vercel.app">
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:player:height" content="560">
     <meta name="twitter:app:player:width" content="360">
