--- a/Client/index.html
+++ b/Client/index.html
@@ -20,6 +20,11 @@
     <meta name="twitter:app:player:height" content="560">
     <meta name="x:app:player:width" content="360">
     <meta name="x:app:player:height" content="560">
+    <meta
+      name="SPANK X Wink"
+      content="Instantly evaluate any cryptocurrency token directly on Twitter with real-time insights and token metrics, designed for traders and enthusiasts "
+    />
+
     <meta name="twitter:image" content="https://res.cloudinary.com/ddyiq1oe6/image/upload/v1726578011/Screenshot_2024-09-17_182948_sfwomh.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css">
     <title>Spank Me</title>
