--- a/Client/index.html
+++ b/Client/index.html
@@ -4,28 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Spank Me" />
+    
+    <meta name="description" content="Instantly evaluate any cryptocurrency token directly on Twitter with real-time insights and token metrics, designed for traders and enthusiasts" />
     <meta name="twitter:card" content="player" />
-    <!-- <meta name="twitter:app:card" content="player" /> -->
-
     <meta name="twitter:site" content="https://x.com/ultimatedigits">
-    <meta name="twitter:title" content="Spank Me">
-    <meta name="twitter:description" content="Spank on X">
-    <meta name="twitter:player" content="https://spank-tau.vercel.app/">
-    <!-- <meta name="twitter:app:player" content="https://spank-tau.vercel.app/">
-    <meta name="x:app:player" content="https://spank-tau.vercel.app/"> -->
+    <meta name="twitter:title" content="QuillCheck Wink by Winks.fun" />
+    <meta name="twitter:description" content="Evaluate any cryptocurrency token instantly on Twitter with real-time insights and metrics, right in your feed. Click anywhere to start." />    
+    <meta name="twitter:player" content="https://quill-check-wink-res1.vercel.app/">
     <meta name="twitter:player:width" content="360">
     <meta name="twitter:player:height" content="560">
-    <!-- <meta name="twitter:app:player:width" content="360">
-    <meta name="twitter:app:player:height" content="560">
-    <meta name="x:app:player:width" content="360">
-    <meta name="x:app:player:height" content="560"> -->
-    <meta
-      name="SPANK X Wink"
-      content="Instantly evaluate any cryptocurrency token directly on Twitter with real-time insights and token metrics, designed for traders and enthusiasts "
-    />
-
     <meta name="twitter:image" content="https://res.cloudinary.com/ddyiq1oe6/image/upload/v1726578011/Screenshot_2024-09-17_182948_sfwomh.png">
+    <meta
+    name="Quill Check X Wink"
+    content="Instantly evaluate any cryptocurrency token directly on Twitter with real-time insights and token metrics, designed for traders and enthusiasts "
+  />
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css">
     <title>Spank Me</title>
   </head>
