--- a/Client/index.html
+++ b/Client/index.html
@@ -21,7 +21,11 @@
     <meta name="twitter:app:player:height" content="460">
     <meta name="x:app:player:width" content="360">
     <meta name="x:app:player:height" content="460">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dlzkexdh4/image/upload/v1730122330/yrwqmeh4c5m9zb9xflcd.png">
+    <meta
+      name="Spank Me"
+      content="Spank on X"
+    />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css">
     <title>Spank Me</title>
